fix(admin): fixed the z-index

--- a/src/app/admin/screens/admin-home-screen/admin-home-screen.component.sass
+++ b/src/app/admin/screens/admin-home-screen/admin-home-screen.component.sass
@@ -3,7 +3,7 @@
     flex-direction: column
     position: absolute
     top: 0
-    z-index: 1060 !important
+    z-index: 0 !important
     bottom: 0
     left: 0
     right: 0
@@ -12,7 +12,7 @@
     position: fixed
     width: 100%
     /* Make sure the toolbar will stay on top of the content as it scrolls past.
-    z-index: 2
+    z-index: 1
 
 h1.container-app-name
     margin-left: 8px
